fix:navbar items vertical alignment fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,6 +84,7 @@ body {
   font-weight: 200;
   display: table;
   height: 0;
+  padding-top: 5;
   overflow: hidden;
   visibility: hidden;
 }
